added SQLAlchemy querying to show stats

--- a/templates/home/home.html
+++ b/templates/home/home.html
@@ -9,7 +9,7 @@
 <div class="container-md " id="main-dashboard">
     <div class="row">
             <div class="col col-6" id="dasboard-league-scores">
-                <h3>League Scores</h3>
+                <h3>Leagues</h3>
                 {% if not g.user.leagues %}
                 <a href="/golfantasy/leagues">Join a league today!</a>
                 {% else %}
@@ -23,21 +23,21 @@
                 {% endif %}
             </div>
             <div class="col col-6" id="dashboard-trending-golfers">
-                <h3>Trending Golfers</h3>
+                <h3>Latest PGA Tour Event Results</h3>
+                <h5>{{tournament.tournament_name}}</h5>
+                <p><b>Tournament Date:</b> {{ tournament.date.strftime('%B %d, %Y') }}</p>
                     <table id="myTable" class="display">
                         <thead>
                             <tr>
                                 <th>Name</th>
-                                <th>Avg Score vs. Par (last 30 days)</th>
-                                <th>Avg Score vs. Par (prior 30 days)</th>
+                                <th>Total</th>
                             </tr>
                         </thead>
                         <tbody>
                             {% for golfer in results %}
                             <tr>
-                                <td>{{golfer.first_name}} {{golfer.last_name}}</td>
-                                <td>{{golfer.avg_score_vs_par_last_30}}</td>
-                                <td>{{golfer.avg_score_vs_par_prior_30}}</td>
+                                <td>{{golfer.full_name}}</td>
+                                <td>{{golfer.total_score_vs_par}}</td>
                             </tr>
                             {% endfor %}
                         </tbody>
