--- a/templates/league/league-draft.html
+++ b/templates/league/league-draft.html
@@ -12,19 +12,25 @@ League status:{{league.status}}
         </div>
     <div class="row">
         <div class="col col-3">
-            <h4>Queue</h4>
-            <ul id="queue"></ul>
+            <h4>Drafted Golfers</h4>
+            <ul id="drafted-golfers"></ul>
         </div>
         <div class="col col-6">
             <h4>Available Golfers</h4>
             <ul id="available-golfers"></ul>
         </div>
         <div class="col col-3">
-            <h4>Team</h4>
+            <h4>Team Golfers</h4>
             <ul id="team-golfers"></ul>
         </div>
     </div>
  
+<button id="draft-pick-btn">Make Draft Pick</button>
+
+
+
+
 {% endblock %}
+
 
 
