--- a/templates/home/anon-home.html
+++ b/templates/home/anon-home.html
@@ -2,6 +2,6 @@
 {% block title %} Welcome to Golfantasy! {% endblock %}
 {% block content %}
                   <h2>Get <em>ready</em> to join the ultimate <br> <em>golf fantasy league</em></h2>
-                  <p>Draft and manage your team of professional golfers across all leagues and face off against your friends and millions others around the world.</p>
-                  <a href="/golfantasy/signup">Join Now</a>
+                  <p>Draft and manage your team of professional golfers and face off against your friends and millions others around the world.</p>
+                  <a class="link-offset-2 link-offset-3-hover link-underline link-underline-opacity-0 link-underline-opacity-75-hover" href="/golfantasy/signup"><b>Join Now!</b></a>
 {% endblock %}
