--- a/templates/league/league-create.html
+++ b/templates/league/league-create.html
@@ -8,16 +8,17 @@
         {{ form.hidden_tag() }}
   
         {% for field in form if field.widget.input_type != 'hidden' %}
-          {% for error in field.errors %}
-            <span class="text-danger">{{ error }}</span>
-          {% endfor %}
-          {{ field(placeholder=field.label.text, class="form-control") }}
+          <div class="form-group">
+            <label for="{{ field.id }}" class="control-label">{{ field.label.text }}</label>
+            {% for error in field.errors %}
+              <span class="text-danger">{{ error }}</span>
+            {% endfor %}
+            {{ field(placeholder=field.label.text, class="form-control") }}
+          </div>
         {% endfor %}
   
         <button class="btn btn-primary btn-lg btn-block">Create League!</button>
       </form>
     </div>
   </div>
-
-
 {% endblock %}
