--- a/templates/league/league-lobby.html
+++ b/templates/league/league-lobby.html
@@ -7,8 +7,11 @@
     <h2> Welcome to {{league.league_name}}!</h2>
     <div id="countdown">
     </div>
-    <h4>League Manager:</h4>
+    <h5>{{g.user.username}}, you are the league manager!</h5>
     {% if league.league_manager_id == g.user.id %}
+    <p>
+        <b>League entry code: </b> {{league.entry_code}}
+    </p>
     <form action="/golfantasy/leagues/{{league.id}}/draft" method="post">
         <button id="draft-start-button">Start draft now!</button>
     </form>
@@ -17,11 +20,10 @@
     <div col="row">
         <h4>Teams</h4>
         <div class="col">
-            <ul>
-                {% for team in league.teams%}
-                    <li><a href="/golfantasy/teams/{{team.id}}">{{team.team_name}}</a></li>
-                {% endfor %}
-            </ul>
+           {% for team in league.teams %}
+            <img class="bullet-balls" src="/static/images/golf-ball-logo-2.png"><a class="link-offset-2 link-offset-3-hover link-underline link-underline-opacity-0 link-underline-opacity-75-hover"  href="/golfantasy/teams/{{team.id}}"> {{team.team_name}}</a>
+            {% endfor %}
+            
         </div>
     </div>
 </div>
