--- a/templates/user/signup.html
+++ b/templates/user/signup.html
@@ -5,7 +5,7 @@
 <div class="row justify-content-md-center">
   <div class="col-md-7 col-lg-5">
     <h2 class="join-message">Signup</h2>
-    <form method="POST" id="login_form">
+    <form method="POST" id="signup_form">
       {{ form.hidden_tag() }}
 
       {% for field in form if field.widget.input_type != 'hidden' %}
