--- a/templates/user/user.html
+++ b/templates/user/user.html
@@ -1,17 +1,29 @@
 {% extends 'base.html' %}
-{% block title %} {{user.username}} {% endblock %}
+{% block title %} Welcome to Golfantasy! {% endblock %}
 {% block content %}
+<div class="row justify-content-md-center">
+  <div class="col-md-7 col-lg-5">
+    <h2>{{g.user.username}} Profile</h2>
+    <form method="POST" id="user_update_form">
+      {{ form.hidden_tag() }}
 
-<div class="container-fluid">
-    <h2>{{user.username}} Profile</h2>
-    <div class="row">
-        <div class="col">
+      {% for field in form if field.widget.input_type != 'hidden' %}
+        {% for error in field.errors %}
+          <span class="text-danger">{{ error }}</span>
+        {% endfor %}
+        {% if field.name == 'username' %}
+          {{ field(placeholder=field.label.text, class="form-control", id="signup-username") }}
+        {% elif field.name == 'password' %}
+          {{ field(placeholder=field.label.text, class="form-control", id="signup-password") }}
+        {% else %}
+          {{ field(placeholder=field.label.text, class="form-control") }}
+        {% endif %}
+      {% endfor %}
 
-        </div>
-    </div>
-
+      <button class="btn btn-primary btn-lg btn-block">Update</button>
+    </form>
+  </div>
 </div>
 
-
-
 {% endblock %}
+
